add_library(diffuse SHARED diffuse.cpp)
add_library(dielectric SHARED ior.h dielectric.cpp)
add_library(conductor SHARED ior.h conductor.cpp)
add_library(plastic SHARED ior.h plastic.cpp)
add_library(roughdiffuse SHARED roughdiffuse.cpp)
add_library(roughdielectric SHARED ior.h microfacet.h roughdielectric.cpp)
add_library(roughconductor SHARED ior.h microfacet.h roughconductor.cpp)
add_library(roughplastic SHARED ior.h microfacet.h rtrans.h roughplastic.cpp)
add_library(twosided SHARED twosided.cpp)
add_library(mask SHARED mask.cpp)
add_library(mixturebsdf SHARED mixturebsdf.cpp)
add_library(blendbsdf SHARED blendbsdf.cpp)
add_library(coating SHARED ior.h coating.cpp)
add_library(roughcoating SHARED ior.h microfacet.h rtrans.h roughcoating.cpp)
add_library(bumpmap SHARED bumpmap.cpp)
add_library(normalmap SHARED normalmap.cpp)
add_library(ward SHARED ward.cpp)
add_library(phong SHARED phong.cpp)
add_library(difftrans SHARED difftrans.cpp)
add_library(hk SHARED hk.cpp)
add_library(null SHARED null.cpp)
add_library(thindielectric SHARED ior.h thindielectric.cpp)
target_link_libraries(diffuse mitsuba-python)
target_link_libraries(dielectric mitsuba-python)
target_link_libraries(conductor mitsuba-python)
target_link_libraries(plastic mitsuba-python)
target_link_libraries(roughdiffuse mitsuba-python)
target_link_libraries(roughdielectric mitsuba-python)
target_link_libraries(roughconductor mitsuba-python)
target_link_libraries(roughplastic mitsuba-python)
target_link_libraries(twosided mitsuba-python)
target_link_libraries(mask mitsuba-python)
target_link_libraries(mixturebsdf mitsuba-python)
target_link_libraries(blendbsdf mitsuba-python)
target_link_libraries(coating mitsuba-python)
target_link_libraries(roughcoating mitsuba-python)
target_link_libraries(bumpmap mitsuba-python)
target_link_libraries(normalmap mitsuba-python)
target_link_libraries(ward mitsuba-python)
target_link_libraries(phong mitsuba-python)
target_link_libraries(difftrans mitsuba-python)
target_link_libraries(hk mitsuba-python)
target_link_libraries(null mitsuba-python)
target_link_libraries(thindielectric mitsuba-python)

set_target_properties(diffuse PROPERTIES FOLDER "plugins")
set_target_properties(dielectric PROPERTIES FOLDER "plugins")
set_target_properties(conductor PROPERTIES FOLDER "plugins")
set_target_properties(plastic PROPERTIES FOLDER "plugins")
set_target_properties(roughdiffuse PROPERTIES FOLDER "plugins")
set_target_properties(roughdielectric PROPERTIES FOLDER "plugins")
set_target_properties(roughconductor PROPERTIES FOLDER "plugins")
set_target_properties(roughplastic PROPERTIES FOLDER "plugins")
set_target_properties(twosided PROPERTIES FOLDER "plugins")
set_target_properties(mask PROPERTIES FOLDER "plugins")
set_target_properties(mixturebsdf PROPERTIES FOLDER "plugins")
set_target_properties(blendbsdf PROPERTIES FOLDER "plugins")
set_target_properties(coating PROPERTIES FOLDER "plugins")
set_target_properties(roughcoating PROPERTIES FOLDER "plugins")
set_target_properties(bumpmap PROPERTIES FOLDER "plugins")
set_target_properties(normalmap PROPERTIES FOLDER "plugins")
set_target_properties(ward PROPERTIES FOLDER "plugins")
set_target_properties(phong PROPERTIES FOLDER "plugins")
set_target_properties(difftrans PROPERTIES FOLDER "plugins")
set_target_properties(hk PROPERTIES FOLDER "plugins")
set_target_properties(null PROPERTIES FOLDER "plugins")
set_target_properties(thindielectric PROPERTIES FOLDER "plugins")

add_library(irawan irawan.cpp)
target_link_libraries(irawan mitsuba-python)
set_target_properties(irawan PROPERTIES FOLDER "plugins")