add_library(isotropic SHARED isotropic.cpp)
add_library(hg SHARED hg.cpp)
add_library(rayleigh SHARED rayleigh.cpp)
add_library(kkay SHARED kkay.cpp)
add_library(microflake SHARED microflake_fiber.h microflake.cpp)
add_library(mixturephase SHARED mixturephase.cpp)

target_link_libraries(isotropic mitsuba-python)
target_link_libraries(hg mitsuba-python)
target_link_libraries(rayleigh mitsuba-python)
target_link_libraries(kkay mitsuba-python)
target_link_libraries(microflake mitsuba-python)
target_link_libraries(mixturephase mitsuba-python)

set_target_properties(isotropic PROPERTIES FOLDER "plugins")
set_target_properties(hg PROPERTIES FOLDER "plugins")
set_target_properties(rayleigh PROPERTIES FOLDER "plugins")
set_target_properties(kkay PROPERTIES FOLDER "plugins")
set_target_properties(microflake PROPERTIES FOLDER "plugins")
set_target_properties(mixturephase PROPERTIES FOLDER "plugins")