add_library(box SHARED box.cpp)
add_library(tent SHARED tent.cpp)
add_library(lanczos SHARED lanczos.cpp)
add_library(mitchell SHARED mitchell.cpp)
add_library(catmullrom SHARED catmullrom.cpp)
add_library(gaussian SHARED gaussian.cpp)

target_link_libraries(box mitsuba-python)
target_link_libraries(tent mitsuba-python)
target_link_libraries(lanczos mitsuba-python)
target_link_libraries(mitchell mitsuba-python)
target_link_libraries(catmullrom mitsuba-python)
target_link_libraries(gaussian mitsuba-python)

set_target_properties(box PROPERTIES FOLDER "plugins")
set_target_properties(tent PROPERTIES FOLDER "plugins")
set_target_properties(lanczos PROPERTIES FOLDER "plugins")
set_target_properties(mitchell PROPERTIES FOLDER "plugins")
set_target_properties(catmullrom PROPERTIES FOLDER "plugins")
set_target_properties(gaussian PROPERTIES FOLDER "plugins")