add_library(independent SHARED independent.cpp)
add_library(stratified SHARED stratified.cpp)
add_library(halton SHARED halton.cpp faure.cpp faure.h)
add_library(hammersley SHARED hammersley.cpp faure.cpp)
add_library(ldsampler SHARED ldsampler.cpp)
add_library(sobol SHARED sobol.cpp sobolseq.cpp sobolseq.h)

target_link_libraries(independent mitsuba-python)
target_link_libraries(stratified mitsuba-python)
target_link_libraries(halton mitsuba-python)
target_link_libraries(hammersley mitsuba-python)
target_link_libraries(ldsampler mitsuba-python)
target_link_libraries(sobol mitsuba-python)

set_target_properties(independent PROPERTIES FOLDER "plugins")
set_target_properties(stratified PROPERTIES FOLDER "plugins")
set_target_properties(halton PROPERTIES FOLDER "plugins")
set_target_properties(hammersley PROPERTIES FOLDER "plugins")
set_target_properties(ldsampler PROPERTIES FOLDER "plugins")
set_target_properties(sobol PROPERTIES FOLDER "plugins")