add_library(radiancemeter SHARED radiancemeter.cpp)
add_library(irradiancemeter SHARED irradiancemeter.cpp)
add_library(fluencemeter SHARED fluencemeter.cpp)
add_library(perspective SHARED perspective.cpp)
add_library(perspective_rdist SHARED perspective_rdist.cpp)
add_library(thinlens SHARED thinlens.cpp)
add_library(orthographic SHARED orthographic.cpp)
add_library(telecentric SHARED telecentric.cpp)
add_library(spherical SHARED spherical.cpp)

target_link_libraries(radiancemeter mitsuba-python)
target_link_libraries(irradiancemeter mitsuba-python)
target_link_libraries(fluencemeter mitsuba-python)
target_link_libraries(perspective mitsuba-python)
target_link_libraries(perspective_rdist mitsuba-python)
target_link_libraries(thinlens mitsuba-python)
target_link_libraries(orthographic mitsuba-python)
target_link_libraries(telecentric mitsuba-python)
target_link_libraries(spherical mitsuba-python)

set_target_properties(radiancemeter PROPERTIES FOLDER "plugins")
set_target_properties(irradiancemeter PROPERTIES FOLDER "plugins")
set_target_properties(fluencemeter PROPERTIES FOLDER "plugins")
set_target_properties(perspective PROPERTIES FOLDER "plugins")
set_target_properties(perspective_rdist PROPERTIES FOLDER "plugins")
set_target_properties(thinlens PROPERTIES FOLDER "plugins")
set_target_properties(orthographic PROPERTIES FOLDER "plugins")
set_target_properties(telecentric PROPERTIES FOLDER "plugins")
set_target_properties(spherical PROPERTIES FOLDER "plugins")