add_library(bitmap SHARED bitmap.cpp)
add_library(scale SHARED scale.cpp)
add_library(gridtexture SHARED gridtexture.cpp)
add_library(checkerboard SHARED checkerboard.cpp)
add_library(vertexcolors SHARED vertexcolors.cpp)
add_library(wireframe SHARED wireframe.cpp)
add_library(curvature SHARED curvature.cpp)

target_link_libraries(bitmap mitsuba-python)
target_link_libraries(scale mitsuba-python)
target_link_libraries(gridtexture mitsuba-python)
target_link_libraries(checkerboard mitsuba-python)
target_link_libraries(vertexcolors mitsuba-python)
target_link_libraries(wireframe mitsuba-python)
target_link_libraries(curvature mitsuba-python)

set_target_properties(bitmap PROPERTIES FOLDER "plugins")
set_target_properties(scale PROPERTIES FOLDER "plugins")
set_target_properties(gridtexture PROPERTIES FOLDER "plugins")
set_target_properties(checkerboard PROPERTIES FOLDER "plugins")
set_target_properties(vertexcolors PROPERTIES FOLDER "plugins")
set_target_properties(wireframe PROPERTIES FOLDER "plugins")
set_target_properties(curvature PROPERTIES FOLDER "plugins")